优化图标资源

--- a/recordermanager/src/main/res/layout/fragment_record_video.xml
+++ b/recordermanager/src/main/res/layout/fragment_record_video.xml
@@ -50,7 +50,7 @@
         android:id="@+id/iv_record_video_play"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/play"
+        android:src="@drawable/record_video_play"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
@@ -63,7 +63,7 @@
         android:id="@+id/iv_record_video_cancel"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/cancel"
+        android:src="@drawable/record_video_cancel"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
@@ -77,7 +77,7 @@
         android:id="@+id/iv_record_video_confirm"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/confirm"
+        android:src="@drawable/record_video_confirm"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
@@ -91,7 +91,7 @@
         android:id="@+id/iv_record_video_back"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/pull_down"
+        android:src="@drawable/record_video_pull_down"
         app:layout_constraintBottom_toBottomOf="@id/cpb_record_video_record"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
