--- a/recordermanager/src/main/res/layout/fragment_record_video.xml
+++ b/recordermanager/src/main/res/layout/fragment_record_video.xml
@@ -14,6 +14,20 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/iv_record_video_flip_camera"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/record_video_flip_camera"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.06"
+        app:layout_constraintWidth_percent="0.12" />
+
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/tv_record_video_timing"
         android:layout_width="wrap_content"
