优化圆形进度控件，解决连续点击录制过短问题

--- a/recordermanager/src/main/res/layout/rm_fragment_record_video.xml
+++ b/recordermanager/src/main/res/layout/rm_fragment_record_video.xml
@@ -43,15 +43,17 @@
         android:id="@+id/cpb_record_video_record"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        app:cpb_idle_inner_padding="@dimen/dp_2"
         app:cpb_idle_ring_color="@android:color/white"
         app:cpb_idle_ring_width="@dimen/dp_3"
         app:cpb_is_timer_mode="true"
         app:cpb_max_progress="30"
+        app:cpb_pressed_inner_padding="@dimen/dp_2"
         app:cpb_pressed_ring_color="@android:color/white"
         app:cpb_pressed_ring_width="@dimen/dp_3"
+        app:cpb_released_inner_padding="@dimen/dp_2"
         app:cpb_released_ring_color="@android:color/white"
         app:cpb_released_ring_width="@dimen/dp_3"
-        app:cpb_ring_padding="@dimen/dp_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintLeft_toLeftOf="parent"
