--- a/recordermanager/src/main/res/layout/rm_fragment_record_video.xml
+++ b/recordermanager/src/main/res/layout/rm_fragment_record_video.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +14,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <android.support.v7.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_record_video_flip_camera"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -28,7 +28,7 @@
         app:layout_constraintVertical_bias="0.04"
         app:layout_constraintWidth_percent="0.12" />
 
-    <android.support.v7.widget.AppCompatTextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_record_video_timing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
         app:layout_constraintVertical_bias="0.85"
         app:layout_constraintWidth_percent="0.25" />
 
-    <android.support.v7.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_record_video_play"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent="0.25" />
 
-    <android.support.v7.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_record_video_cancel"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -89,7 +89,7 @@
         app:layout_constraintVertical_bias="0.85"
         app:layout_constraintWidth_percent="0.16" />
 
-    <android.support.v7.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_record_video_confirm"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -103,7 +103,7 @@
         app:layout_constraintVertical_bias="0.85"
         app:layout_constraintWidth_percent="0.16" />
 
-    <android.support.v7.widget.AppCompatImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_record_video_back"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -114,4 +114,4 @@
         app:layout_constraintRight_toLeftOf="@+id/cpb_record_video_record"
         app:layout_constraintTop_toTopOf="@+id/cpb_record_video_record"
         app:layout_constraintWidth_percent="0.1" />
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
