adding flashlight function

--- a/recordermanager/src/main/res/layout/rm_fragment_record_video.xml
+++ b/recordermanager/src/main/res/layout/rm_fragment_record_video.xml
@@ -15,6 +15,23 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/iv_record_video_flashlight"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/rm_shape_oval_gray"
+        android:padding="14dp"
+        android:src="@drawable/rm_selector_flashlight_state"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.04"
+        app:layout_constraintWidth_percent="0.12" />
+
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv_record_video_flip_camera"
         android:layout_width="0dp"
         android:layout_height="0dp"
